--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <div class="navdot"></div>
                 <div class="navdot"></div>
             </div>
-            <div class="minorlinks">
+            <div class="minorLinks">
                 <img class="imglink linkitem" onclick="copyClipboard()" src="./Assets/Images/gmailicon.png" alt="gmail"></a>
                 <a href="https://github.com/MalachaiRossiter"><img class="imglink linkitem" src="./Assets/Images/instagramicon.png" alt="instagram"></a>
                 <a href="https://www.linkedin.com/in/malachai-rossiter-46639923a/"><img class="imglink linkitem" src="./Assets/Images/twittericon.png" alt="twitter"></a>
@@ -31,6 +31,7 @@
             <p id="copiedEmail">Copied email to clipboard!</p>
         </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="./Assets/script.js"></script>
 </body>
 </html>
