Finished Front Page with sliding Arrow

--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>The Tinkering Artist</title>
     <link rel="stylesheet" href="./Assets/style.css">
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
+    <div class="scrollNote">
+        <p>Scroll or Drag Sideways<span class="material-symbols-outlined">arrow_forward</span></p>
+        <i class="fa-solid fa-arrow-right"></i>
+    </div>
     <!-- Navbar -->
     <div class="navbar-container">
         <div class="navbar">
@@ -36,7 +41,9 @@
     <!-- the body content -->
     <div class="outer-wrapper">
         <div class="wrapper">
-            <div class="slide one"></div>
+            <div class="slide one">
+                <h1 class="title">Tinkering <span>Artist</span></h1>
+            </div>
             <div class="slide two"></div>
             <div class="slide three"></div>
             <div class="slide four"></div>
